$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-03-31 [D] Added document about style.css (work in progress) {GauGau}
2009-03-30 [M] Upgraded jquery to version 1.3.2 {Abbas}
2009-03-29 [O] Removed hard-coded script that opened external links in new windows. Added corresponding plugin instead {GauGau}
2009-03-26 [M] CPG_temp_data table no longer required {Nibbler}
2009-03-25 [M] Removed language list, theme list and language flags from config (thread ID 58681) {GauGau}
2009-02-22 [M] Renamed PHPMailer and SMTP classes to avoid conflicts with other scripts {Nibbler}
2009-03-02 [B] Fixed HTML special characters in referer for hit/vote stats {Paver}
2009-03-02 [B] Added function to recursively delete folder/file structures as a fix for the unlink-issue in update script (thread ID 57514) {GauGau}
2009-02-26 [B] Fixed browser detect giving older IE version when user_agent gives multiple {Paver}
2009-02-26 [B] Fixed converting 'search_phrase' from array to string for table 'hit_stats' {Paver}
2009-02-20 [B] Fixed 'Selecting private pics as a category thumbnail' issue (thread ID 57898) {Nibbler}
2009-02-08 [B] Fixed minibrowser for Windows servers ('browsable interface' for 'batch add files') {Paver}
2009-02-06 [B] Changed redirect for login/logout pages as appropriate to avoid extraneous messages {Paver}
2009-02-06 [B] Fixed 'cookie_warning' on login page when anonymous access is not allowed {Paver}
2009-02-06 [C] Changed 'disapproved' to 'unapproved' in language keys as appropriate {Paver}
2009-01-19 [B] Fixed missing delimiter in basic.sql on exif table {SaWey}