@@ -13,6 +13,7 @@ function FileProgress(file, targetID) {
 
 	this.opacity = 100;
 	this.height = 0;
+	
 
 	this.fileProgressWrapper = document.getElementById(this.fileProgressID);
 	if (!this.fileProgressWrapper) {
@@ -50,15 +51,40 @@ function FileProgress(file, targetID) {
 		document.getElementById(targetID).appendChild(this.fileProgressWrapper);
 	} else {
 		this.fileProgressElement = this.fileProgressWrapper.firstChild;
+		this.reset();
 	}
 
 	this.height = this.fileProgressWrapper.offsetHeight;
+	this.setTimer(null);
+
 
 }
+
+FileProgress.prototype.setTimer = function (timer) {
+	this.fileProgressElement["FP_TIMER"] = timer;
+};
+FileProgress.prototype.getTimer = function (timer) {
+	return this.fileProgressElement["FP_TIMER"] || null;
+};
+
+FileProgress.prototype.reset = function () {
+	this.fileProgressElement.className = "progressContainer";
+
+	this.fileProgressElement.childNodes[2].innerHTML = "&nbsp;";
+	this.fileProgressElement.childNodes[2].className = "progressBarStatus";
+	
+	this.fileProgressElement.childNodes[3].className = "progressBarInProgress";
+	this.fileProgressElement.childNodes[3].style.width = "0%";
+	
+	this.appear();	
+};
+
 FileProgress.prototype.setProgress = function (percentage) {
 	this.fileProgressElement.className = "progressContainer green";
 	this.fileProgressElement.childNodes[3].className = "progressBarInProgress";
 	this.fileProgressElement.childNodes[3].style.width = percentage + "%";
+
+	this.appear();	
 };
 FileProgress.prototype.setComplete = function () {
 	this.fileProgressElement.className = "progressContainer blue";
@@ -66,9 +92,9 @@ FileProgress.prototype.setComplete = function () {
 	this.fileProgressElement.childNodes[3].style.width = "";
 
 	var oSelf = this;
-	setTimeout(function () {
+	this.setTimer(setTimeout(function () {
 		oSelf.disappear();
-	}, 10000);
+	}, 10000));
 };
 FileProgress.prototype.setError = function () {
 	this.fileProgressElement.className = "progressContainer red";
@@ -76,9 +102,9 @@ FileProgress.prototype.setError = function () {
 	this.fileProgressElement.childNodes[3].style.width = "";
 
 	var oSelf = this;
-	setTimeout(function () {
+	this.setTimer(setTimeout(function () {
 		oSelf.disappear();
-	}, 5000);
+	}, 5000));
 };
 FileProgress.prototype.setCancelled = function () {
 	this.fileProgressElement.className = "progressContainer";
@@ -86,9 +112,9 @@ FileProgress.prototype.setCancelled = function () {
 	this.fileProgressElement.childNodes[3].style.width = "";
 
 	var oSelf = this;
-	setTimeout(function () {
+	this.setTimer(setTimeout(function () {
 		oSelf.disappear();
-	}, 2000);
+	}, 2000));
 };
 FileProgress.prototype.setStatus = function (status) {
 	this.fileProgressElement.childNodes[2].innerHTML = status;
@@ -104,6 +130,31 @@ FileProgress.prototype.toggleCancel = function (show, swfUploadInstance) {
 			return false;
 		};
 	}
+};
+
+FileProgress.prototype.appear = function () {
+	if (this.getTimer() !== null) {
+		clearTimeout(this.getTimer());
+		this.setTimer(null);
+	}
+	
+	if (this.fileProgressWrapper.filters) {
+		try {
+			this.fileProgressWrapper.filters.item("DXImageTransform.Microsoft.Alpha").opacity = 100;
+		} catch (e) {
+			// If it is not set initially, the browser will throw an error.  This will set it if it is not set yet.
+			this.fileProgressWrapper.style.filter = "progid:DXImageTransform.Microsoft.Alpha(opacity=100)";
+		}
+	} else {
+		this.fileProgressWrapper.style.opacity = 1;
+	}
+		
+	this.fileProgressWrapper.style.height = "";
+	
+	this.height = this.fileProgressWrapper.offsetHeight;
+	this.opacity = 100;
+	this.fileProgressWrapper.style.display = "";
+	
 };
 
 // Fades out and clips away the FileProgress box.
@@ -142,10 +193,11 @@ FileProgress.prototype.disappear = function () {
 
 	if (this.height > 0 || this.opacity > 0) {
 		var oSelf = this;
-		setTimeout(function () {
+		this.setTimer(setTimeout(function () {
 			oSelf.disappear();
-		}, rate);
+		}, rate));
 	} else {
 		this.fileProgressWrapper.style.display = "none";
+		this.setTimer(null);
 	}
 };
