@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-03-31 [M] Upgraded SwfUpload to v2.2.0.1 Stable version. {Abbas}
 2009-03-31 [D] Added document about style.css (work in progress) {GauGau}
 2009-03-30 [M] Upgraded jquery to version 1.3.2 {Abbas}
 2009-03-29 [O] Removed hard-coded script that opened external links in new windows. Added corresponding plugin instead {GauGau}
